# vibe-app

./: README.md  project.code-workspace
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/api/: httpClient.tsx  useGetHello.tsx
client/src/components/: ContentNavigator.tsx
client/src/components/pages/: DashboardExample.tsx  GenericExample.tsx  PlotlyChartExample.tsx  UserExample.tsx
client/src/components/util/: ErrorBoundry.tsx
client/src/types/: api.ts
rele/: .gitignore  pyproject.toml
rele/src/rele/: __init__.py
server/: main.py  pyproject.toml
server/app/: main.py
server/scripts/: start-server.sh
