[project]
name = "rele"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "allavinner", email = "joel.w.ottosson@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
rele = "rele:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
